# ursa_lumi

./: Cargo.toml  Physics.md  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: check_for_updates.yml  check_licenses.yml  tests.yml
Documentation/: Generation_Algorithm.md
Physics/: Physics.md
integration_tests/: example_params.json  test.sh
scripts/: run_ignored_tests.sh
src/: galactic_chunk.rs  generation_parameters.rs  main.rs  population.rs  stellar_system.rs
src/mass_density/: inner_bulge.rs  mod.rs
