[package]
name = "ursa_lumi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] } # (De)Serialization
serde_json = { version = "1.0", default-features = false, features = ["std"] }
uom = { version = "0.36.0", default-features = false, features = ["f64", "si", "serde", "std"] }

[dev-dependencies]
serial_test = "3.2.0"
